--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p I like chicken
+
+  <button type="button" class="btn btn-secondary">Prees Me</button>
