--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,4 @@ block content
   h1= title
   p I like chicken
 
-  <button type="button" class="btn btn-secondary">Prees Me</button>
+  <button type="button" class="btn btn-info">Prees Me</button>
