--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,13 @@ block content
   p I like chicken
 
   <button type="button" class="btn btn-info">Prees Me</button>
+  div#faster Increase the speed 
+  button(type="button" class="btn btn-danger" onclick="goFaster()") Go Faster
+  script. 
+    let mph = 20;
+    let change = 1;
+    function goFaster() {
+      mph = mph + change;
+      change = change + 1;
+      document.getElementById("faster").innerText = `MPH ${mph} with change ${change}`
+    }
