--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,10 @@ block content
   p I like chicken
 
   <button type="button" class="btn btn-info">Prees Me</button>
+
+  
   div#faster Increase the speed 
-  button(type="button" class="btn btn-danger" onclick="goFaster()") Go Faster
+  button(type="button" class="btn btn-primary" onclick="goFaster()") Go Faster
   script. 
     let mph = 20;
     let change = 1;
