--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
 
   <button type="button" class="btn btn-info">Prees Me</button>
 
-  
+
   div#faster Increase the speed 
   button(type="button" class="btn btn-primary" onclick="goFaster()") Go Faster
   script. 
@@ -17,3 +17,6 @@ block content
       change = change + 1;
       document.getElementById("faster").innerText = `MPH ${mph} with change ${change}`
     }
+
+  hr
+  a(href='/zebra') zebralink
